# jemedefends

./: .aicontextignore  .env.example  .gitignore  .prettierrc.json  .sqlfluff  LAUNCH.sh  Makefile  README.md  deployment-script.sh  guides_manquants.txt  package-lock.json  package.json  postcss.config.js  pyproject.toml  resultstemp.html  tailwind.config.js  test.py
.continue/rules/: guides-components-consistency.md  guides-components-standards.md
app/: config.py  dependencies.py  main.py
app/api/: router.py
app/api/v1/: api.py
app/api/v1/endpoints/: form_drafts.py  letters.py  payments.py  session.py
app/core/: form_draft_repository.py  form_draft_service.py  letter_generator.py  letter_repository.py  letter_service.py  payment_service.py  pdf_generator.py  production_logging.py  session_manager.py
app/db/: connection.py  sqlc.yaml
app/db/queries/: document.sql  form_draft.sql  letter.sql  payment.sql  postal_delivery.sql
app/db/schema/: schema.sql
app/models/: form_draft.py  letters.py
app/static/css/: app.css  formulaire.css  input.css  resultats.css
app/static/js/: form_draft.js  resultats.js
app/templates/: formulaire.html  index.html  mentions_legales.html  politique_confidentialite.html  resultats.html  template_base.html  test_eligibilite.html
app/templates/letters/: basic_mise_en_demeure.html  pdf_mise_en_demeure.html
app/utils/: exceptions.py
backend/: .env.example  Dockerfile  Makefile.backend  docker-compose.yml  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/endpoints/: form_drafts.py  letters.py
backend/app/core/: ai_service.py  form_draft_repository.py  letter_generator.py  letter_repository.py  letter_service.py  pdf_generator.py  pdf_service.py
backend/app/db/: sqlc.yaml
backend/app/db/migrations/: 001_initial.sql
backend/app/db/queries/: form_draft.sql  letter.sql
backend/app/db/schema/: schema.sql
backend/app/models/: letters.py
backend/app/static/css/: app.css  resultats.css
backend/app/static/js/: eligibilite.js  form_draft.js  resultats.js
backend/app/templates/: eligibilite.html  formulaire.html  resultats.html
backend/app/templates/letters/: basic_mise_en_demeure.html  pdf_mise_en_demeure.html
backend/app/utils/: draft_cookie.py
backend/data/: routes.yaml
backend/deployment/docker/: Dockerfile.prod  docker-compose.prod.yml
backend/deployment/nginx/: nginx.conf
backend/scripts/: backup-db.sh  deploy.sh  generate_pages.py  generate_pages_mobile_fixed.py  migrate.sh
data/: content.yaml
frontend/: .eslintcache  .eslintrc.json  .madgerc.json  .prettierignore  apply_full_guides_impl.sh  complete_legal_migration.sh  eslint.config.mjs  fix-ui-casing.sh  jest.config.js  jest.config.mjs  jest.setup.js  knip.config.json  legal_fetcher_robust.py  lighthouse.config.js  logs.txt  next.config.js  package-lock.json  package.json  restore-ui-pascalcase.sh  setup-faq-and-animate.sh  tailwind.config.js  tsconfig.eslint.json  tsconfig.eslint.tsbuildinfo  tsconfig.json
frontend/__tests__/: eligibility.test.tsx
frontend/public/: robots.txt
frontend/scripts/: build-guides.js
frontend/src/: middleware.ts
frontend/src/app/: ClientGlobals.tsx  error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
frontend/src/app/(bare)/: layout.tsx
frontend/src/app/(site)/: ClientDynamics.tsx  page.tsx
frontend/src/app/_watchdog/: RenderWatchdog.tsx
frontend/src/app/contact/: client-page.tsx  page.tsx
frontend/src/app/eligibilite/: page.tsx
frontend/src/app/faq/: client-page.tsx  page.tsx
frontend/src/app/guides/: client-page.tsx  page.tsx
frontend/src/app/mentions-legales/: page.tsx
frontend/src/app/politique-confidentialite/: page.tsx
frontend/src/components/: Analytics.tsx  CookieBanner.tsx  index.ts
frontend/src/components/common/: ErrorBoundary.tsx  LoadingSpinner.tsx
frontend/src/components/cta/: StickyMobileCTA.tsx  index.ts
frontend/src/components/dev/: DevEditButton.tsx  DevPanel.tsx  DevToolbar.tsx  NewGuideCreator.tsx  YAMLEditor.tsx  index.ts
frontend/src/components/eligibility/: EligibilityFlow.tsx  EligibilityForm.tsx  EligibilityHero.tsx  EligibilityResults.tsx  EligibilityResultsComponents.tsx  EligibilityWizard.tsx  ExitIntentModal.tsx  QuestionCard.tsx  ResultPanel.tsx  ResultsDisplay.tsx  ResultsOverlay.tsx  index.ts
frontend/src/components/faq/: FaqSectionSticky.tsx  TopFAQ.tsx  index.ts
frontend/src/components/form/: AddressCombobox.tsx  AddressInput.tsx  BackOnlyNavigation.tsx  FormField.tsx  FormGenerator.tsx  FormLayout.tsx  FormProgress.tsx  FormProvider.tsx  index.ts  (+12 more)
frontend/src/constants/: eligibilitySteps.ts  form-harmonization.ts  legal.ts  legal_texts.generated.json
frontend/src/content/: guides.tsx
frontend/src/eligibility/: engine.ts
frontend/src/hooks/: form.tsx  index.ts  useAnalytics.ts  useApi.ts  useConsent.tsx  useDevGuides.ts  useEligibilityForm.tsx  useExitIntent.tsx  useGuides.ts  useLazyLoad.tsx  useMobileOptimization.ts  usePerformanceMonitoring.ts  useResultsPage.ts  useScrollOffset.ts  useTableOfContents.ts  useTocStable.ts
frontend/src/legal/: LegalHydrator.tsx  api.ts  hooks.ts  registry.generated.json  registry.ts
frontend/src/lib/: address.ts  analytics.ts  api.ts  bootstrap.ts  cache.ts  fieldValidation.ts  guide-registry.ts  guide-relations.ts  guide-utils.ts  icon-utils.ts  normalizeName.ts  performance.ts  performance.tsx  search-utils.ts  seo-mobile-config.ts  statusClass.ts  testData.ts  ui-tokens.ts  utils.ts  validation.ts  yaml-guide-converter.ts  yaml-guide-converter.tsx  yaml-guide-validator.ts  yaml-schema.ts  yaml-templates.ts
frontend/src/services/: aiService.ts
frontend/src/styles/: globals.css  print.css
frontend/src/types/: analytics.d.ts  api.ts  components.ts  eligibility.ts  form.ts  form.tsx  guide-components.ts  guides.ts  shared-form.ts
frontend/src/utils/: motion.ts  textExtractor.ts
frontend/tests/: legal.integrity.test.ts
frontend/tools/: legal_ref_centralizer.py  legal_sync.py
shared/: types.ts
tests/test_core/: test_pdf_generator.py
(+336 files in other folders)
