[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "je-me-defends-backend"
version = "0.1.0"
description = "Je me défends - Aide aux particuliers pour les litiges de consommation"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic_settings>=2.10.1",
    "pydantic[email]",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "weasyprint>=61.2",
    "pillow>=10.1.0",
    "jinja2>=3.1.2",
    "stripe>=7.8.0",
    "itsdangerous==2.2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.2",
    "typing-extensions>=4.8.0",
    "pycountry>=24.6.1",
    "aiohttp>=3.13.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2.0",
    "mypy>=1.7.1",
    "sqlfluff==3.3.1",
    "markdown>=3.4.4"
]

[tool.sqlfluff.core]
dialect = "postgres"
large_file_skip_byte_limit = 65536
max_line_length = -1
rules = "core"
templater = "placeholder"

[tool.sqlfluff.templater.placeholder]
param_regex = 'sqlc.arg\((.*?)\)|@([A-Za-z_][A-Za-z0-9_]*)'

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "E501",
    "N806",
    "N803"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["app"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
implicit_reexport = false
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "weasyprint.*",
    "stripe.*",
    "sqlalchemy.*",
    "asyncpg.*",
    "psycopg2.*"
]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build]
dev-mode-dirs = ["app"]
